Refactor: ProductImg Controller 삭제, Repository, Service 소스보완